pytorch basics:dataset class added

--- a/pytorch_basics.ipynb
+++ b/pytorch_basics.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "c3f587e2",
+   "id": "e9c023b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "83aae50a",
+   "id": "c29c003a",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "96ab1be6",
+   "id": "5f0bb438",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "1d45c805",
+   "id": "5f1b1999",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "847a8fe0",
+   "id": "fe55ab20",
    "metadata": {
     "scrolled": true
    },
@@ -162,15 +162,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8efe2350",
+   "execution_count": 86,
+   "id": "92c636bc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ================================================================== #\n",
     "#                5. Input pipeline for custom dataset                 #\n",
-    "# ================================================================== #\n"
+    "# ================================================================== #\n",
+    "from PIL import Image\n",
+    "class custumDataset(torch.utils.data.Dataset):\n",
+    "    def __init__ (self,root,mode,transform):\n",
+    "        self.root=root\n",
+    "        self.imgs= list(sorted(os.listdir(os.path.join(root,mode))))\n",
+    "        self.mode=mode\n",
+    "        # 1. Initialize file paths or a list of file names. \n",
+    "        pass\n",
+    "    def __getitem__(self,idx):\n",
+    "        img_path = os.path.join(self.root, self.mode+'/img/', self.imgs[idx])\n",
+    "        mask_path = os.path.join(self.root, self.mode+'/msk/', self.imgs[idx])\n",
+    "        img = Image.open(img_path).convert(\"RGB\")\n",
+    "        mask = Image.open(mask_path)\n",
+    "        mask=mask[:,:,0]\n",
+    "        pass\n",
+    "        return img,mask\n",
+    "        \n",
+    "    def __len__(self):\n",
+    "        return len(self.imgs)\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d26979a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
